<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.rongcloud.demo.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_connect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/main_connect" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_send_message"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_send_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_conversation_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_conversation_list" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_conversation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_conversation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_callkit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_call" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_calllib"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_call" />

</LinearLayout>